force-app/main/default/objects/Mail__c/fields/Approval_Of_Insurance_Payout__c.field-meta.xml
<CustomField>
    <fullName>Approval_Of_Insurance_Payout__c</fullName>
    <description>Used to approve or reject payment of insurance</description>
    <label>Approval Of Insurance Payout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>