force-app/main/default/objects/Mail__c/fields/Missing__c.field-meta.xml
<CustomField>
    <fullName>Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing?</label>
    <type>Checkbox</type>
</CustomField>