force-app/main/default/objects/Mail__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>route__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>